@@ -1,11 +1,11 @@
 Package: NanoStringNorm
 Type: Package
 Title: Normalize NanoString miRNA and mRNA Data
-Version: 1.1.22
-Date: 2017-06-30
+Version: 1.2.0
+Date: 2017-08-18
 Author: Daryl M. Waggott
 Maintainer: Paul Boutros <Paul.Boutros@oicr.on.ca>
-Depends: R (>= 2.14.0), gdata (>= 2.8.2), vsn (>= 3.22.0)
+Depends: R (>= 2.14.0), gdata (>= 2.8.2), vsn (>= 3.22.0), XML (>= 3.98-1.5)
 Imports: methods
 Suggests: googleVis (>= 0.2.14), lme4, RUnit (>= 0.4.26)
 Description: A set of tools for normalizing, diagnostics and visualization of NanoString nCounter data.
