@@ -1,3 +1,8 @@
+NanoStringNorm 1.2.0 2017-08-18
+----------------------------------------------------------------
+
+* fixed read.markup.RCC() error on new NanoString nCounter FLEX instrument
+
 NanoStringNorm 1.1.22 2017-06-30
 ----------------------------------------------------------------
 
